--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1464,6 +1464,8 @@ h6,
 
 
 
+
+
 #ext_menu-5a .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -1545,10 +1547,27 @@ h6,
 #content1-5d P {
   font-family: 'Roboto Slab', serif;
   font-size: 14px;
+  text-align: left;
 }
 #content2-5e SPAN {
   font-family: 'Roboto Slab', serif;
   font-size: 13px;
+}
+#content2-5e P {
+  text-align: left;
+}
+#header3-5w .mbr-section-title,
+#header3-5w .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-5w .mbr-section-title {
+  text-align: left;
+  font-family: 'Lora', serif;
+  font-size: 30px;
+}
+#header3-5w .mbr-section-title SPAN {
+  font-size: 23px;
+  color: #c0a375;
 }
 #features3-5n P {
   font-size: 14px;
@@ -1581,4 +1600,10 @@ h6,
   font-family: 'PT Serif', serif;
   font-size: 13px;
   color: #8c8c8c;
+}
+#footer1-4z P {
+  color: #c0a375;
+  text-align: center;
+  font-family: 'Bitter', serif;
+  font-size: 12px;
 }
